<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Raise an animal</string>
    <string name="main_dog_fragment">Dog</string>
    <string name="main_cat_fragment">Cat</string>
    <string name="main_horse_fragment">Horse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cat_tip_one" tools:ignore="TypographyDashes">1. Cats are indeed independent by nature, but they are not quite able to take care of themselves. Before you adopt, make sure that your lifestyle can make room for a feline. How busy you are and the amount of time you spend at home will dictate the kind of cat you should get -- very busy people may find it difficult to find the time for a cat that needs a lot of grooming and attention, especially the highly intelligent and active cats. But, there are cats that are ideal for the working lifestyle. Do your research.</string>
    <string name="cat_tip_two">2. What if your circumstances change after the adoption? Or if you work long hours and still want a friendly face to greet you at the door at the end of the day? Adopting a buddy for the cat to play with can be an excellent solution.</string>
    <string name="cat_tip_three">3. Do you have any allergies? If you do suffer from severe allergic reactions, consider testing yourself for feline allergies before bringing a cat home. Then again, some people with allergies might adapt to their own pet, but still be allergic to other cats. A safe bet is to choose a cat with low allergens. Consult your vet, books, or animal shelter employees for suggestions.</string>
    <string name="next">Next</string>
    <string name="dog_tip_one">1. Life Balance Your dog is part of your family it\'s important to manage your time properly. We are all pretty busy especially if we are parents shuttling our children around to their various sports and hobbies. Juggling that with work and a dog, it is essential you schedule time in your calendar for you, your dog, and your family. Be sure to schedule some interactive time with just you and your dog. Spending quality time with your dog strengthens your relationship with him and can relax a busy person like you! Do not forget to schedule dog-free time too. Schedule time in everyday where he is left completely alone to rest. Crate training your dog can give him a safe space just his own. He needs the break.</string>
    <string name="dog_tip_two">2. Foster Good Self Esteem Dogs have self esteem? You bet. Dogs are creatures that learn. Mistakes are part of learning. Pet owners need to be careful to let their dog work out problems for themselves. Do not micromanage or help them too much, especially when they are trying to learn something new. Just stand back and give them a few seconds to work it out. If they get confused, just restart the challenge in an easier form or give your dog a hint. For example, you are trying to teach your dog to sit. Rather than pushing on his hind end, pulling on the leash, or repeating sit, sit, sit, stand silent and wait. If he needs help, restart the problem by backing up several steps, say sit once, pause a second, then lure his nose up and back with a treat in your hand. Reward!</string>
    <string name="dog_tip_three">3. Set Limits Just like children, dogs thrive on rules and structure. Your dog should have a clear and consistent set of rules that everyone in the house follows with the dog. Post them on the fridge! My favorite is wait at the door. Teach your dog he may not run through doors to the outside without your permission. Make sure everyone in the house follows this rule - Always! Keep in mind, dogs are very bad at generalizing. This means that you should not let your dog jump on you when wearing workout clothes, but yell at him when he jumps on your work clothes. This will only confuse or frustrate your dog and cause naughty behavior.</string>
    <string name="horse_tip_one">1. Create a comfortable stall for your horse. Depending on how you will be using your horse (work or leisure), he could end up spending a good amount of time in his stall. It is very important that his stall is dry, safe, and comfortable. For example, his stall should be in an area of the barn that is well-ventilated</string>
    <string name="horse_tip_two">2. Provide your horse with outdoor shelter. When your horse is outside grazing, he should have a place to go where he can to protect himself from the elements. A sturdy, three-sided box stall can provide this kind of shelter. The box stall should have a waterproof roof and be positioned such that the back wall faces the wind</string>
    <string name="horse_tip_three">3. Remember that your horse was never meant to live in a stall. It is best to allow as much time in a pasture as possible, even overnight. Horses only sleep for about two hours, leaving 22 hours left in the day to socialize! Even if you use your horse more for leisure than work, it is essential that you give him time outside of his stall to graze and stroll around in a paddock or pasture. This outside time gives your horse a chance to exercise. In general, about one acre of pasture is needed per horse, but the more space, the better</string>
    <string name="all_tips">Tips :</string>
</resources>
